--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,3 +1,8 @@
+// Breakpoints 
+$mobile: 480px; // min 480 max 768
+$tablet: 768px;
+$desktop: 1200px;
+
 // Colors
 $main-color: #FFFFFF;
 $contrast-color: #000000;
