--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,18 +1,20 @@
 header {
     border-bottom: 1px solid $border-color;
-    display: flex;
-    align-self: auto;
 }
 
 .header__container {
     display: flex;
     align-items: center;
+    @media screen and (min-width: 480px) and (max-width: 768px) {
+        justify-content: space-between;
+    }
 }
 
 .navigation {
     display: flex;
     align-items: center;
     margin-right: auto;
+    // mobile 
 }
 
 .navigation__list {
@@ -23,7 +25,7 @@ header {
     & > li:not(:last-child) {
         margin-right: 50px;
     }
-    @media screen and (min-width: 400px) and (max-width: 500px) {
+    @media screen and (min-width: 480px) and (max-width: 768px) {
         display: none;
     }
 }
@@ -62,10 +64,23 @@ header {
     }
 }
 
+.navigation__menu--mobile {
+    display: none;
+    @media screen and (min-width: 480px) and (max-width: 768px) {
+        display: inline-block;
+        fill: black;
+        width: 40px;
+        height: 40px;
+    }
+}
+
 .contacts {
     display: flex;
     & li:last-child {
         margin-left: 30px;
+    }
+    @media screen and (min-width: 480px) and (max-width: 768px) {
+        display: none;
     }
 }
 
