--- a/sass/components/_index-we-do.scss
+++ b/sass/components/_index-we-do.scss
@@ -7,6 +7,9 @@
 .activities__section {
     padding-top: 0;
     padding-bottom: 94px;
+    @media screen and (min-width: 480px) and (max-width: 768px) {
+        display: none;
+    }
 }
 
 .activities__description {
