--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,8 @@ ul {
 }
 
 .container {
-  min-width: 450px;
+  display: block;
+  width: 450px;
   padding-left: 0px;
   padding-right: 0px;
   margin-left: auto;
@@ -31,11 +32,7 @@ ul {
   letter-spacing: 0.03em;
   color: #FFFFFF;
   text-transform: none;
-  display: inline-block;
-  margin-right: 92px;
   text-decoration: none;
-  margin-top: 15px;
-  margin-bottom: 15px;
 }
 
 .logo {
@@ -55,25 +52,33 @@ header {
 }
 
 .header__container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  display: block;
+  width: 480px;
+  padding-top: 10px;
+  padding-bottom: 9px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .navigation {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: auto;
+}
+
+.navigation__menu--mobile {
+  width: 40px;
+  height: 40px;
+  fill: #212121;
+  margin-right: 0;
 }
 
 .navigation__list {
@@ -133,13 +138,6 @@ header {
   margin-bottom: -1px;
 }
 
-.navigation__menu--mobile {
-  display: inline-block;
-  fill: black;
-  width: 40px;
-  height: 40px;
-}
-
 .contacts {
   display: none;
 }
@@ -196,8 +194,6 @@ header {
 
 footer {
   background: #212121;
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 .footer__container {
