--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -2,11 +2,16 @@ header {
     border-bottom: 1px solid $border-color;
 }
 
-
 .header__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: block;
+    width: 480px;
+    
+    padding-top: 10px;
+    padding-bottom: 9px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
 }
 // .header__container {
 //     display: flex;
@@ -18,9 +23,24 @@ header {
 
 .navigation {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    margin-right: auto;
 }
+
+.navigation__menu--mobile {
+    width: 40px;
+    height: 40px;
+    fill: $main-text-color;
+    margin-right: 0;
+}
+
+
+
+
+
+
+
+
 
 .navigation__list {
     display: none;
@@ -82,12 +102,7 @@ header {
     }
 }
 
-.navigation__menu--mobile {
-    display: inline-block;
-    fill: black;
-    width: 40px;
-    height: 40px;
-}
+
 // .navigation__menu--mobile {
 //     display: none;
 //     @media screen and (min-width: 480px) and (max-width: 768px) {
