--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,7 +9,8 @@ ul {
 }
 
 .container {
-    min-width: 450px;
+    display: block;
+    width: 450px;
     padding-left: 0px;
     padding-right: 0px;
     margin-left: auto;
