--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -6,6 +6,8 @@ footer {
     display: flex;
     justify-content: center;
     flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .footer__address--mobile {
