--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@ ul {
 
 .container {
     display: block;
-    width: 450px;
+    max-width: 450px;
     padding-left: 0px;
     padding-right: 0px;
     margin-left: auto;
