--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -4,7 +4,7 @@ header {
 
 .header__container {
     display: block;
-    width: 480px;
+    max-width: 480px;
     
     padding-top: 10px;
     padding-bottom: 9px;
