--- a/css/main.css
+++ b/css/main.css
@@ -515,8 +515,7 @@ footer {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 480px;
-  height: 400px;
+  max-width: 480px;
   padding: 0;
   margin-left: auto;
   margin-right: auto;
