--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -5,8 +5,8 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    width: 480px;
-    height: 400px;
+    max-width: 480px;
+    
     padding: 0;
     margin-left: auto;
     margin-right: auto;
@@ -32,6 +32,13 @@
     @include font-set ($font-weight: 700, $font-size: 16px, $line-height: 30px, $letter-spacing: 0.06em);
     cursor: pointer;
 }
+
+
+
+
+
+
+
 
 // Modal Window 
 
