--- a/css/main.css
+++ b/css/main.css
@@ -519,6 +519,8 @@ footer {
   padding: 0;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 118px;
+  padding-bottom: 118px;
 }
 
 .hero-section__text {
@@ -532,7 +534,6 @@ footer {
   color: #FFFFFF;
   text-transform: uppercase;
   display: block;
-  padding-top: 118px;
 }
 
 .hero-section__button {
