--- a/sass/components/_index-hero.scss
+++ b/sass/components/_index-hero.scss
@@ -10,12 +10,13 @@
     padding: 0;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 118px;
+    padding-bottom: 118px;
 }
 
 .hero-section__text {
     @include font-set($font-weight: 900, $font-size: 26px, $line-height: 42px, $letter-spacing: 0.06em, $transform: uppercase);
     display: block;
-    padding-top: 118px;
 }
 
 .hero-section__button {
