--- a/sass/components/_index-qualities.scss
+++ b/sass/components/_index-qualities.scss
@@ -9,11 +9,9 @@
 }
 
 .qualities__list {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    display: block;
+
     & li {
-        width: 270px;
         margin-bottom: 30px;
         width: 100%;
         display: flex;
@@ -25,16 +23,19 @@
         } 
     }
     & svg {
+        display: block;
         width: 70px;
         height: 70px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 25px;
+        margin-bottom: 25px;
     }
 }
 
 .qualities__card {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 450px;
+    display: block;
+    max-width: 450px;
     height: 120px;
     background-color: $secondary-background-color;
     margin-bottom: 30px;
@@ -44,11 +45,9 @@
 
 .qualities__heading {
     @include font-set ($font-weight: 700, $text-align: left, $letter-spacing: 0.03em, $color: $main-text-color, $transform: uppercase);
-    display: inline-flex;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 10px;
-
 }
 
 .qualities__text {
