--- a/sass/components/_index-team.scss
+++ b/sass/components/_index-team.scss
@@ -32,8 +32,8 @@
 
 .team__mobile-member-image {
     display: block;
-    max-width: 450px;
-    
+    width: 100%;
+    max-width: 450px;    
 }
 
 
