--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -119,7 +119,7 @@ footer {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 450px;
+    width: 100%;
     margin-top: 60px;
     margin-left: auto;
     
@@ -171,7 +171,7 @@ footer {
 
 #footer-form__mail {
     display: inline-block;
-    width: 450px;
+    width: 100%;
     background-color: $main-text-color;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
