--- a/css/main.css
+++ b/css/main.css
@@ -1160,6 +1160,8 @@ footer {
 }
 
 .client {
+  margin-left: 15px;
+  margin-right: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1172,17 +1174,11 @@ footer {
 }
 
 .client li {
-  margin: 0px;
   margin-bottom: 30px;
 }
 
-.client li:nth-child(n+5) {
-  margin-bottom: 0;
-}
-
-.client li:not(:last-child) {
-  margin-right: 30px;
-  margin-right: 0;
+.client li:nth-last-of-type(-n+2) {
+  margin-bottom: 0px;
 }
 
 .client__card {
@@ -1192,7 +1188,7 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 210px;
+  max-width: 210px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
