--- a/css/main.css
+++ b/css/main.css
@@ -1160,8 +1160,6 @@ footer {
 }
 
 .client {
-  margin-left: 15px;
-  margin-right: 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1170,11 +1168,16 @@ footer {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  margin-left: 15px;
+  margin-right: 15px;
   margin-top: 50px;
 }
 
 .client li {
+  width: 46.66%;
   margin-bottom: 30px;
+  -ms-flex-preferred-size: 40%;
+      flex-basis: 40%;
 }
 
 .client li:nth-last-of-type(-n+2) {
@@ -1188,7 +1191,11 @@ footer {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   max-width: 210px;
+  height: 90px;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1202,12 +1209,7 @@ footer {
 
 .client__pict {
   fill: #AFB1B8;
-  width: 106px;
-  height: 60px;
-  margin-left: 32px;
-  margin-right: 32px;
-  margin-top: 16px;
-  margin-bottom: 16px;
+  width: 50.48%;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
