--- a/sass/components/_index-clients.scss
+++ b/sass/components/_index-clients.scss
@@ -1,13 +1,21 @@
+// 450
 .client {
-    margin-left: 15px;
-    margin-right: 15px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    
+    margin-left: 15px;
+    margin-right: 15px;
     margin-top: 50px;
+    
     & li {
+        // 210 
+        width: 46.66%;
+
         margin-bottom: 30px;
+        flex-basis: 40%;
     }
+    
     & li:nth-last-of-type(-n+2) {
         margin-bottom: 0px;
     }
@@ -41,7 +49,10 @@
 .client__card {
     display: flex;
     justify-content: center;
+    align-items: center;
+
     max-width: 210px;
+    height: 90px;
     border: 1px solid $inactive-pict-color;
     border-radius: 4px;
     transition: border-color $cubic-standard;
@@ -68,13 +79,12 @@
 // }
 
 .client__pict {
+
     fill: $inactive-pict-color;
-    width: 106px;
-    height: 60px;
-    margin-left: 32px;
-    margin-right: 32px;
-    margin-top: 16px;
-    margin-bottom: 16px;
+    width: 50.48%;
+    // width: 106px;
+    // height: 60px;
+  
     transition: fill $cubic-standard;
     .client__card:hover & {
         fill: $active-color;
