--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,6 @@ ul {
 .container {
   display: block;
   max-width: 450px;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -1168,16 +1166,12 @@ footer {
           justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-left: 15px;
-  margin-right: 15px;
   margin-top: 50px;
 }
 
 .client li {
-  width: 46.66%;
+  display: inline-block;
   margin-bottom: 30px;
-  -ms-flex-preferred-size: 40%;
-      flex-basis: 40%;
 }
 
 .client li:nth-last-of-type(-n+2) {
@@ -1185,17 +1179,8 @@ footer {
 }
 
 .client__card {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  max-width: 210px;
-  height: 90px;
+  display: block;
+  width: 100%;
   border: 1px solid #AFB1B8;
   border-radius: 4px;
   -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1208,8 +1193,11 @@ footer {
 }
 
 .client__pict {
+  display: inline-block;
   fill: #AFB1B8;
-  width: 50.48%;
+  width: 106px;
+  height: 60px;
+  margin: 16px 52px;
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
